# philo

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_results.xml
.github/workflows/: norm.yml
include/: check.h  message.h  philo.h  utils.h
includes/: philo.h  philosopher.h  utils.h
libft/: Makefile  ft_atoi.c  ft_atoi_double.c  ft_atoi_long.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_printf.c  ft_printf_c.c  ft_printf_d.c  ft_printf_i.c  ft_printf_p.c  ft_printf_pp.c  ft_printf_s.c  ft_printf_u.c  ft_printf_x.c  ft_printf_xx.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  (+26 more)
src/: ft_atoi.c  main.c  philosopher.c  utils.c
srcs/: action.c  check.c  death.c  ft_atoi.c  ft_atoll.c  main.c  philo.c  philo_actions.c  philo_fork.c  philo_routine.c  philo_utils.c  philosopher.c  utils.c
srcs/check/: check_args.c
srcs/message/: message.c
srcs/philo/: actions.c  fork.c  log.c  main.c  philo.c
srcs/utils/: ft_atoi.c
test/integration/: run_integration_tests.sh  test_philo.sh
test/unit/: CMakeLists.txt
test/unit/src/: philosopher.cpp  utils.cpp
test/unit/srcs/: check.cpp  ft_atoi.cpp  philo.cpp  utils.cpp
